--- a/package.json
+++ b/package.json
@@ -1,28 +1,4 @@
 {
-  "_from": "react-scripts",
-  "_id": "react-scripts@2.1.1",
-  "_inBundle": false,
-  "_integrity": "sha512-f6KCUy7opItgeana1Ghwj+lYQp5BTHSaivG/dbfiIqSm5QdOIUV5eiFSBsbaAE6GEKqGYmZDK6Yw5WmbrhxaFg==",
-  "_location": "/react-scripts",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "tag",
-    "registry": true,
-    "raw": "react-scripts",
-    "name": "react-scripts",
-    "escapedName": "react-scripts",
-    "rawSpec": "",
-    "saveSpec": null,
-    "fetchSpec": "latest"
-  },
-  "_requiredBy": [
-    "#USER",
-    "/"
-  ],
-  "_resolved": "https://registry.npmjs.org/react-scripts/-/react-scripts-2.1.1.tgz",
-  "_shasum": "c2959a756b0b61d3090adece0d7aedd324dff8a5",
-  "_spec": "react-scripts",
-  "_where": "/Users/weiyu.chen/workspace/test/custom-react-script",
   "bin": {
     "react-scripts": "./bin/react-scripts.js"
   },
@@ -33,9 +9,8 @@
     "not op_mini all"
   ],
   "bugs": {
-    "url": "https://github.com/facebook/create-react-app/issues"
+    "url": "https://github.com/Weiyu-Chen/react-scripts-modern/issues"
   },
-  "bundleDependencies": false,
   "dependencies": {
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
@@ -85,7 +60,6 @@
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
   },
-  "deprecated": false,
   "description": "Configuration and scripts for Create React App.",
   "devDependencies": {
     "babel-preset-react-app-wy": "^6.1.2",
@@ -109,14 +83,14 @@
   ],
   "homepage": "https://github.com/facebook/create-react-app#readme",
   "license": "MIT",
-  "name": "react-scripts",
+  "name": "react-scripts-modern",
   "optionalDependencies": {
     "fsevents": "1.2.4"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/facebook/create-react-app.git"
+    "url": "git+https://github.com/Weiyu-Chen/react-scripts-modern.git"
   },
   "types": "./lib/react-app.d.ts",
-  "version": "2.1.1"
+  "version": "1.0.0"
 }
