--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
+    "babel-preset-react-app-wy": "^6.1.2",    
     "babel-plugin-named-asset-import": "^0.2.3",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
@@ -41,6 +42,8 @@
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "0.4.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
@@ -56,18 +59,15 @@
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
     "webpack": "4.19.1",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-dev-server": "3.1.9",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
   },
   "description": "Configuration and scripts for Create React App.",
   "devDependencies": {
-    "babel-preset-react-app-wy": "^6.1.2",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "webpack-bundle-analyzer": "^3.0.3"
+    "react-dom": "^16.3.2"
   },
   "engines": {
     "node": ">=6"
@@ -92,5 +92,5 @@
     "url": "git+https://github.com/Weiyu-Chen/react-scripts-modern.git"
   },
   "types": "./lib/react-app.d.ts",
-  "version": "1.0.0"
+  "version": "1.0.2"
 }
